--- a/ios/PushNotification/PushNotification/en.lproj/MainStoryboard.storyboard
+++ b/ios/PushNotification/PushNotification/en.lproj/MainStoryboard.storyboard
@@ -14,16 +14,36 @@
                     <view key="view" contentMode="scaleToFill" id="3">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <switch opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="Uxy-EP-h80">
+                                <rect key="frame" x="221" y="20" width="79" height="27"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="toggleReceiveNotification:" destination="2" eventType="valueChanged" id="75X-XG-BTe"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Remote Notifications" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="QRC-h3-IPc">
+                                <rect key="frame" x="20" y="20" width="160" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="receiveNotificationSwitch" destination="Uxy-EP-h80" id="jaN-n1-kaU"/>
+                    </connections>
                 </viewController>
             </objects>
+            <point key="canvasLocation" x="71" y="82"/>
         </scene>
         <!--Connection View Controller-->
         <scene sceneID="XOk-8Y-heP">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="IAT-Ph-dyb" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="On7-kz-eKe" customClass="ConnectionViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ConnectionViewController" id="On7-kz-eKe" customClass="ConnectionViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="yBr-mC-KMq">
                         <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -66,7 +86,7 @@
                     </view>
                 </viewController>
             </objects>
-            <point key="canvasLocation" x="475" y="76"/>
+            <point key="canvasLocation" x="475" y="82"/>
         </scene>
     </scenes>
     <classes>
@@ -79,6 +99,7 @@
         <class className="ViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
+                <relationship kind="action" name="toggleReceiveNotification:"/>
                 <relationship kind="outlet" name="receiveNotificationSwitch" candidateClass="UISwitch"/>
             </relationships>
         </class>
