--- a/ios/PushNotification/PushNotification/en.lproj/MainStoryboard.storyboard
+++ b/ios/PushNotification/PushNotification/en.lproj/MainStoryboard.storyboard
@@ -29,10 +29,18 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="message" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="11s-dP-GLh">
+                                <rect key="frame" x="20" y="55" width="280" height="21"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="messageLabel" destination="11s-dP-GLh" id="Vxb-Qs-Y9y"/>
                         <outlet property="receiveNotificationSwitch" destination="Uxy-EP-h80" id="jaN-n1-kaU"/>
                     </connections>
                 </viewController>
@@ -100,6 +108,7 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
             <relationships>
                 <relationship kind="action" name="toggleReceiveNotification:"/>
+                <relationship kind="outlet" name="messageLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="receiveNotificationSwitch" candidateClass="UISwitch"/>
             </relationships>
         </class>
